--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "dayjs": "^1.11.19",
+    "html2pdf.js": "^0.14.0",
+    "keycloak-js": "^26.2.3",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
